testsuite/tests/lexical_envs/gen_pkg_inst/test.out
CompilationUnit[1:1-10:10]
|prelude:
|  AdaNodeList[1:1-1:1]: <empty list>
|body:
|  LibraryItem[1:1-10:10]
|  |has_private:
|  |  PrivateAbsent[1:1-1:1]
|  |item:
|  |  SubpBody[1:1-10:10]
|  |  |overriding:
|  |  |  OverridingUnspecified[1:1-1:1]
|  |  |subp_spec:
|  |  |  SubpSpec[1:1-1:15]
|  |  |  |subp_kind:
|  |  |  |  SubpKindProcedure[1:1-1:10]
|  |  |  |subp_name:
|  |  |  |  DefiningName[1:11-1:15]
|  |  |  |  |name:
|  |  |  |  |  Id[1:11-1:15]: Test
|  |  |  |subp_params: <null>
|  |  |  |subp_returns: <null>
|  |  |aspects: <null>
|  |  |decls:
|  |  |  DeclarativePart[1:18-8:1]
|  |  |  |decls:
|  |  |  |  AdaNodeList[2:4-7:38]
|  |  |  |  |  GenericPackageDecl[2:4-5:10]
|  |  |  |  |  |formal_part:
|  |  |  |  |  |  GenericFormalPart[2:4-3:19]
|  |  |  |  |  |  |decls:
|  |  |  |  |  |  |  AdaNodeList[3:7-3:19]
|  |  |  |  |  |  |  |  GenericFormalObjDecl[3:7-3:19]
|  |  |  |  |  |  |  |  |decl:
|  |  |  |  |  |  |  |  |  ObjectDecl[3:7-3:19]
|  |  |  |  |  |  |  |  |  |ids:
|  |  |  |  |  |  |  |  |  |  DefiningNameList[3:7-3:8]
|  |  |  |  |  |  |  |  |  |  |  DefiningName[3:7-3:8]
|  |  |  |  |  |  |  |  |  |  |  |name:
|  |  |  |  |  |  |  |  |  |  |  |  Id[3:7-3:8]: T
|  |  |  |  |  |  |  |  |  |has_aliased:
|  |  |  |  |  |  |  |  |  |  AliasedAbsent[3:10-3:10]
|  |  |  |  |  |  |  |  |  |has_constant:
|  |  |  |  |  |  |  |  |  |  ConstantAbsent[3:10-3:10]
|  |  |  |  |  |  |  |  |  |mode:
|  |  |  |  |  |  |  |  |  |  ModeDefault[3:10-3:10]
|  |  |  |  |  |  |  |  |  |type_expr:
|  |  |  |  |  |  |  |  |  |  SubtypeIndication[3:11-3:18]
|  |  |  |  |  |  |  |  |  |  |has_not_null:
|  |  |  |  |  |  |  |  |  |  |  NotNullAbsent[3:10-3:10]
|  |  |  |  |  |  |  |  |  |  |name:
|  |  |  |  |  |  |  |  |  |  |  Id[3:11-3:18]: Integer
|  |  |  |  |  |  |  |  |  |  |constraint: <null>
|  |  |  |  |  |  |  |  |  |default_expr: <null>
|  |  |  |  |  |  |  |  |  |renaming_clause: <null>
|  |  |  |  |  |  |  |  |  |aspects: <null>
|  |  |  |  |  |package_decl:
|  |  |  |  |  |  GenericPackageInternal[4:4-5:10]
|  |  |  |  |  |  |package_name:
|  |  |  |  |  |  |  DefiningName[4:12-4:13]
|  |  |  |  |  |  |  |name:
|  |  |  |  |  |  |  |  Id[4:12-4:13]: D
|  |  |  |  |  |  |aspects: <null>
|  |  |  |  |  |  |public_part:
|  |  |  |  |  |  |  PublicPart[4:16-5:4]
|  |  |  |  |  |  |  |decls:
|  |  |  |  |  |  |  |  AdaNodeList[4:16-4:16]: <empty list>
|  |  |  |  |  |  |private_part: <null>
|  |  |  |  |  |  |end_name:
|  |  |  |  |  |  |  EndName[5:8-5:9]
|  |  |  |  |  |  |  |name:
|  |  |  |  |  |  |  |  Id[5:8-5:9]: D
|  |  |  |  |  GenericPackageInstantiation[7:4-7:38]
|  |  |  |  |  |name:
|  |  |  |  |  |  DefiningName[7:12-7:18]
|  |  |  |  |  |  |name:
|  |  |  |  |  |  |  Id[7:12-7:18]: D_Inst
|  |  |  |  |  |generic_pkg_name:
|  |  |  |  |  |  Id[7:26-7:27]: D
|  |  |  |  |  |params:
|  |  |  |  |  |  AssocList[7:29-7:36]
|  |  |  |  |  |  |  ParamAssoc[7:29-7:36]
|  |  |  |  |  |  |  |designator:
|  |  |  |  |  |  |  |  Id[7:29-7:30]: T
|  |  |  |  |  |  |  |r_expr:
|  |  |  |  |  |  |  |  Int[7:34-7:36]: 12
|  |  |  |  |  |aspects: <null>
|  |  |stmts:
|  |  |  HandledStmts[8:6-10:1]
|  |  |  |stmts:
|  |  |  |  StmtList[9:4-9:9]
|  |  |  |  |  NullStmt[9:4-9:9]
|  |  |  |exceptions:
|  |  |  |  AdaNodeList[9:8-9:8]: <empty list>
|  |  |end_name:
|  |  |  EndName[10:5-10:9]
|  |  |  |name:
|  |  |  |  Id[10:5-10:9]: Test
|pragmas:
|  PragmaNodeList[10:10-10:10]: <empty list>

==== Dumping lexical environments ====
@1 = LexEnv(Static_Primary, Parent=$root, Node=<PackageDecl ["Standard"] __standard:1:1-121:14>):
    'a': [<EnumLiteralDecl ["'A'"] __standard:20:22-20:25>, <EnumLiteralDecl ["'A'"] __standard:21:27-21:30>, <EnumLiteralDecl ["'A'"] __standard:22:32-22:35>]
    ascii: [<PackageDecl ["ASCII"] __standard:23:3-103:13>]
    boolean: [<TypeDecl ["Boolean"] __standard:3:3-3:33>]
    character: [<TypeDecl ["Character"] __standard:20:3-20:27>]
    constraint_error: [<ExceptionDecl ["Constraint_Error"] __standard:115:3-115:32>]
    duration: [<TypeDecl ["Duration"] __standard:111:3-113:42>]
    false: [<EnumLiteralDecl ["False"] __standard:3:20-3:25>]
    float: [<TypeDecl ["Float"] __standard:13:3-14:51>]
    integer: [<TypeDecl ["Integer"] __standard:4:3-4:54>]
    long_float: [<TypeDecl ["Long_Float"] __standard:15:3-16:73>]
    long_integer: [<TypeDecl ["Long_Integer"] __standard:9:3-9:66>]
    long_long_float: [<TypeDecl ["Long_Long_Float"] __standard:17:3-19:33>]
    long_long_integer: [<TypeDecl ["Long_Long_Integer"] __standard:10:3-10:66>]
    natural: [<SubtypeDecl ["Natural"] __standard:5:3-5:57>]
    positive: [<SubtypeDecl ["Positive"] __standard:6:3-6:57>]
    program_error: [<ExceptionDecl ["Program_Error"] __standard:116:3-116:32>]
    short_float: [<TypeDecl ["Short_Float"] __standard:11:3-12:51>]
    short_integer: [<TypeDecl ["Short_Integer"] __standard:8:3-8:66>]
    short_short_integer: [<TypeDecl ["Short_Short_Integer"] __standard:7:3-7:64>]
    storage_error: [<ExceptionDecl ["Storage_Error"] __standard:117:3-117:32>]
    string: [<TypeDecl ["String"] __standard:104:3-104:57>]
    tasking_error: [<ExceptionDecl ["Tasking_Error"] __standard:118:3-118:32>]
    test: [<SubpBody ["Test"] test.adb:1:1-10:10>]
    true: [<EnumLiteralDecl ["True"] __standard:3:27-3:31>]
    universal_int_type_: [<TypeDecl ["Universal_Int_Type_"] __standard:119:3-119:45>]
    universal_real_type_: [<TypeDecl ["Universal_Real_Type_"] __standard:120:3-120:42>]
    wide_character: [<TypeDecl ["Wide_Character"] __standard:21:3-21:32>]
    wide_string: [<TypeDecl ["Wide_String"] __standard:106:3-107:39>]
    wide_wide_character: [<TypeDecl ["Wide_Wide_Character"] __standard:22:3-22:37>]
    wide_wide_string: [<TypeDecl ["Wide_Wide_String"] __standard:108:3-109:44>]

$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] __standard:1:1-121:14>]

@2 = LexEnv(Static_Primary, Parent=@1, Node=<SubpBody ["Test"] test.adb:1:1-10:10>):
    d: [<GenericPackageDecl ["D"] test.adb:2:4-5:10>]
    d_inst: [<GenericPackageInstantiation ["D_Inst"] test.adb:7:4-7:38>]

@3 = LexEnv(Static_Primary, Parent=@2, Node=<GenericPackageDecl ["D"] test.adb:2:4-5:10>):
    t: [<ObjectDecl ["T"] test.adb:3:7-3:19>]

@4 = LexEnv(Static_Primary, Parent=@3, Node=<GenericPackageInternal ["D"] test.adb:4:4-5:10>):
    <empty>

@5 = LexEnv(Static_Primary, Parent=@2, Node=<GenericPackageInstantiation ["D_Inst"] test.adb:7:4-7:38>):
    <empty>

